--- a/style.css
+++ b/style.css
@@ -28,6 +28,12 @@ ul{
   display: block;
 }
 
+.button--purple p{
+  background-color: #9792e4;
+  width: fit-content;
+  font-size: 25px;
+}
+
 .button a{
   text-decoration: none;
 }
@@ -92,6 +98,7 @@ i{
   display: flex;
   flex-direction: column;
   padding: 20px;
+  height: 100%;
 }
 
 .card--white{
@@ -148,6 +155,8 @@ header{
 header .fa-bars,
 header img{
   vertical-align: middle;
+  color: white;
+  font-size: 40px;
 }
 
 /***** SECTIONS *****/
@@ -202,16 +211,17 @@ section:nth-of-type(even){
   border-radius: 70px;
   background-color: #9792E4;
   color: white;
-  height: 700px;
-  width: 500px;
+  height: 70%;
+  width: 70%;
   margin: 30px auto;
 }
 
 
-#testimonials .card img{
-    border-radius: 308px;
-    width: 331px;
-    height: 334px;
+#testimonials img{
+  border-radius: 50%;
+  width: 200px;
+  object-fit: cover;
+  height: 200px;
 }
 
 /* Benefits */
@@ -232,6 +242,41 @@ section:nth-of-type(even){
 
 #benefits .container{
   height: 2500px;
+}
+
+/* About Us */
+
+#about-us{
+  margin: 32px;
+  line-height: 2;
+}
+
+#about-us h2 {
+  font-size: 50px;
+  padding: 25px 0px;
+  color: #9792E4;
+}
+
+#about-us p{
+  font-size: 30px;
+}
+
+#about-us img{
+  border-radius: 50%;
+  width: 200px;
+  object-fit: cover;
+  height: 200px;
+}
+
+.about-img{
+  margin-top: 90px;
+}
+
+.about-img i{
+  position: relative;
+  bottom: 150px;
+  right: 50px;
+  color: #9792E4;
 }
 
 
