--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 
 img{
-  width: 80%;
+  width: 100%;
 }
 
 ul{
@@ -66,6 +66,7 @@ i{
 .container{
   width: 100%;
   padding: 0 20px;
+  border: 1px solid red;
 }
 
 
@@ -82,6 +83,7 @@ i{
 
 .column{
   width: 100%;
+  display: flex;
   flex-direction: column;
  
 }
@@ -109,6 +111,7 @@ i{
   flex-direction: column;
   padding: 20px;
   height: 100%;
+  border: 1px solid red;
 }
 
 .card--white{
@@ -197,14 +200,13 @@ section:nth-of-type(even){
   align-items: center;
   margin-bottom: 100px;
   border-radius: 70px;
+  margin-top: 65px;
+  padding: 35px;
 }
 
 #strategic-planner .container{
   background-color: #9792E4;
-}
-
-#strategic-planner .column{
-  height: 700px;
+  height: auto;
 }
 
 #strategic-planner .card i{
@@ -212,6 +214,11 @@ section:nth-of-type(even){
   border-radius: 135px;
   font-size: 20px;
   background-color: #9792E4;
+}
+
+.img-woman{
+  border: 1px solid red;
+  text-align: center;
 }
 
 /* Testimonials */
@@ -317,12 +324,23 @@ section:nth-of-type(even){
 
 footer{
   background-color: #333333;
+  color: #fff;
+  text-align: center;
+}
+
+footer .column{
+  padding: 40px;
 }
 
 
 
 
 @media screen and (min-width: 768px){
+
+  .img-woman{
+    width: 80%;
+    text-align: center;
+  }
 
   #product-presentation .column {
     width: calc(100% / 3);
@@ -335,6 +353,19 @@ footer{
 
   #product-presentation img{
     width: 50%;
+  }
+
+  #strategic-planner .card{
+    display: flex;
+    width: 90%;
+    margin-top: 70px;
+  }
+
+
+
+  #strategic-planner .column{
+    text-align: center;
+    
   }
 
 
@@ -371,15 +402,3 @@ footer{
 
 /***** debug *****/
 
-.debug section{
-  min-height: 500px;
-}
-
-.debug footer {
-  min-height: 160px;
-}
-
-.debug .column{
-  min-height: 250px;
-  border: 1px dashed red;
-}
