--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
   font-family: 'Merriweather Sans', sans-serif;
 }
 
+.bordo{
+  border: 1px solid red;
+}
+
 
 img{
   width: 100%;
@@ -33,6 +37,8 @@ ul{
   width: fit-content;
   font-size: 25px;
 }
+
+
 
 .button--white{
   background-color: white;
@@ -155,6 +161,7 @@ header{
   width: 100%;
   min-height: 80px;
   line-height: 80px;
+  z-index: 10;
 }
 
 .menu{
@@ -266,6 +273,17 @@ section:nth-of-type(even){
   height: 2500px;
 }
 
+#benefits a{
+    background-color: #9792E4;
+    width: 116px;
+    text-align: center;
+    padding: 10px;
+    text-decoration: none;
+    color: white;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+
 /* About Us */
 
 #about-us{
@@ -299,6 +317,7 @@ section:nth-of-type(even){
   bottom: 150px;
   right: 50px;
   color: #9792E4;
+  
 }
 
 /* Get Started */
@@ -383,15 +402,50 @@ footer .column{
     flex-direction: row;
   }
 
+  #testimonials .card{
+    width: 100%;
+    height: 100%;
+  }
+
   .direction-row{
     flex-direction: row;
   }
 
   #benefits .card{
+    text-align: left;
     width: calc();
   }
 
+ .about-us-cont{
+  
+  padding: 50px;
+  flex-direction: row;
+    
 }
+
+.about-img{
+  padding: 50px;
+  margin-top: 0px;
+}
+
+#about-us .about-img h2{
+  font-size: 27px;
+}
+
+#about-us .column{
+  flex-direction: row;
+    
+}
+
+.bottone {
+  text-decoration: none;
+  background-color: #9792E4;
+  padding: 15px;
+  border-radius: 15px;
+  color: white;
+}
+
+/* ------------------------------------------ */
 
 @media screen and (min-width: 1200px) {
 
@@ -449,7 +503,11 @@ footer .column{
     display: flex;
     margin-bottom: -82px;
     padding: 19px
-    
+  }
+
+  #testimonials .card{
+    width: 80%;
+    height: 80%;
   }
 
   .img-woman{
@@ -457,21 +515,37 @@ footer .column{
     margin-top: -265px;
   }
 
-  .bordo{
-    flex-direction: column;
-    
+  .direction-column{
+    flex-direction: column;  
   }
 
   #product-presentation p{
     color: white;
   }
+
+  #benefits .row{
+    border: 3px solid red;
+    
+  }
+
+  #benefits .column{
+    border: 3px solid blue;
+    width: calc(100% / 3);
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+  }
+
+  #benefits .card{
+    border: 3px solid green;
+    
+  }
+
+  #benefits .container{
+    border: 1px solid black;
+    
+  }
   
 }
 
-
-
-
-
-
-/***** debug *****/
 
